--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="action_settings">Settings</string>
     <string name="button">All Off</string>
     <string name="button2">&#xf00d;</string>
-    <string name="open_weather_maps_app_id">242b2e02b63b8cd071a731d90c2c4249</string>
+    <string name="open_weather_maps_app_id">api key goes here</string>
     <string name="city">Sonoma</string>
     <string name="weather_sunny">&#xf00d;</string>
     <string name="weather_clear_night">&#xf02e;</string>
